# raster_tools

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  contribute.md  demo.py  env.yml  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  raster.py  raster_tools.distance.html  raster_tools.html  release.sh  search.html  searchindex.js  setup.py  sh.exe.stackdump
.doctrees/: environment.pickle  index.doctree  raster_tools.distance.doctree  raster_tools.doctree
.doctrees/reference/: blocks.doctree  clipping.doctree  distance.doctree  index.doctree  line_stats.doctree  masking.doctree  raster.doctree  rasterize.doctree  top_level.doctree  vector.doctree
.github/workflows/: build_docs.yml  paper-draft-pdf.yml  pre-commit.yaml  tests.yaml
_modules/: index.html
_modules/raster_tools/: _mosaic.html  _padding.html  _stack.html  batch.html  blocks.html  clipping.html  creation.html  dask_utils.html  dtypes.html  focal.html  general.html  io.html  line_stats.html  masking.html  raster.html  rasterize.html  stat_common.html  surface.html  utils.html  vector.html  warp.html  zonal.html
_modules/raster_tools/distance/: cost_distance.html  proximity.html
_sources/: index.rst  raster_tools.distance.rst
_sources/reference/: blocks.rst  general.rst  line_stats.rst  raster.rst  surface.rst  top_level.rst  warp.rst  zonal.rst
_static/: documentation_options.js
ci/requirements/: doc.yml
docs/: README.md  api.rst  conf.py  index.rst  modules.rst  raster_tools.costdist.rst  raster_tools.distance.rst  raster_tools.rst
docs/reference/: costdist.rst  distance.rst  focal.rst  general.rst  index.rst  masking.rst  raster.rst  rasterize.rst  surface.rst  top_level.rst  vector.rst
notebooks/: ANF_ML.ipynb  EstimatingBaa.ipynb  LidarDownload.ipynb  PODs_Integration.ipynb  Python_Automation_ANFS.ipynb  README.md  SampleDesign.ipynb  SampleDesignLidarKM.ipynb  TCSI_Demo.ipynb  clipping_module.ipynb  creation_module.ipynb  distance_module.ipynb  focal_module.ipynb  general_module.ipynb  install_raster_tools.md  rstools39.yml  surface_module.ipynb  tutorials.md  zonal_module.ipynb
paper/: paper.bib  paper.md
raster_tools/: __init__.py  _compat.py  _grids.py  _mosaic.py  _padding.py  _stack.py  _types.py  _utils.py  _version.py  batch.py  blocks.py  clipping.py  creation.py  dask_utils.py  dtypes.py  exceptions.py  focal.py  general.py  io.py  line_stats.py  masking.py  raster.py  raster_funcs.py  rasterize.py  rsv_utils.py  stat_common.py  surface.py  utils.py  vector.py  warp.py  zonal.py
raster_tools/costdist/: __init__.py  _core.pyx  _costdist.py
raster_tools/distance/: __init__.py  _core.py  _core.pyx  _costdist.py  _heap.pxd  _heap.py  _heap.pyx  cost_distance.py  proximity.py
reference/: blocks.html  clipping.html  distance.html  focal.html  general.html  index.html  line_stats.html  masking.html  raster.html  rasterize.html  surface.html  top_level.html  vector.html  warp.html  zonal.html
refs/heads/main/: modules.html  objects.inv  raster_tools.distance.html
refs/heads/main/.doctrees/: environment.pickle
refs/heads/main/_modules/: index.html
refs/heads/main/reference/: rasterize.html  top_level.html
refs/tags/v0.8.3/: .buildinfo
refs/tags/v0.8.3/.doctrees/: environment.pickle  modules.doctree
refs/tags/v0.8.3/_static/: documentation_options.js
refs/tags/v0.8.3/reference/: distance.html  general.html  raster.html  surface.html  warp.html  zonal.html
requirements/: 310-ci.yml  311-ci.yml  312-ci.yml  313-ci.yml  314-ci.yml  37-ci.yml  38-ci.yml  39-ci.yml  default.txt  dev.txt  dev.yml  docs.txt  docs.yml  release.yml
test/: test_clipping.py  test_costdist.py  test_distance.py  test_focal.py  test_general.py  test_raster.py  test_raster_funcs.py  test_stat_common.py  test_surface.py  test_vector.py  test_zonal.py
test/data/: clipping_clip_pods_10.tif  multiband_small.tif
test/data/vector/: pods.shx  pods_first_10.shx
test/data/vector/Zones.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000004.gdbtable  a00000005.CatItemTypesByName.atx  a00000005.gdbtablx  a00000006.FDO_UUID.atx  a00000007.CatRelTypesByBackwardLabel.atx  a00000007.CatRelTypesByForwardLabel.atx  a00000007.CatRelTypesByName.atx  a00000007.CatRelTypesByOriginItemTypeID.atx  a00000007.CatRelTypesByUUID.atx  a00000007.gdbtable  a00000009.gdbtablx  a00000009.spx  a0000000a.gdbtable  a0000000a.gdbtablx  a0000000a.spx
tests/: conftest.py  test_blocks.py  test_clipping.py  test_creation.py  test_distance.py  test_distance__heap.py  test_distance_proximity.py  test_dtypes.py  test_focal.py  test_general.py  test_grids.py  test_io.py  test_lazy_loading.py  test_line_stats.py  test_mosaic.py  test_padding.py  test_raster.py  test_rasterize.py  test_stack.py  test_stat_common.py  test_surface.py  test_test_utils.py  test_utils.py  test_vector.py  test_warp.py  test_write.py  test_zonal.py  testdata.py  utils.py
tests/data/: clipping_envelope_pods_10.tif  null_values.tiff  pods_like_elevation_objectid_field.tif
tests/data/raster/: clipping_clip_pods_10.tif  clipping_envelope_pods_10.tif  clipping_erase_pods_10.tif  clipping_mask_pods_10.tif  dem_clipped_small.tif  dem_small.tif  elevation_small.tif  grib_example_1.grib  grib_example_2.grib2  multiband_small.tif  nc_example_1.nc  nc_example_2.nc  nc_example_3.nc  prox_haversine_allocation.tif  prox_haversine_direction.tif  prox_haversine_proximity.tif  prox_src.tif
tests/data/vector/: pods.dbf  pods.shp  pods_first_10.dbf  pods_first_10.prj  pods_first_10.shp  pods_small.dbf  pods_small.shp  pods_small.shx  test_circles_small.dbf  test_circles_small.shp  test_circles_small.shx
tests/data/vector/Zones.gdb/: a00000001.gdbtablx  a00000003.gdbtable  a00000004.CatItemsByPhysicalName.atx  a00000004.FDO_UUID.atx  a00000004.gdbtablx  a00000005.CatItemTypesByParentTypeID.atx  a00000005.CatItemTypesByUUID.atx  a00000005.gdbtable  a00000006.gdbtable  (+5 more)
tools/: rm_matching_c_cpp_file.sh
web_app/: create_raster.py
(+21 files in other folders)
