[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "raster-tools"
description = "Tools for processing geospatial data"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "affine",
    "cfgrib",
    "dask",
    "dask-geopandas",
    "dask-image",
    "fiona",
    "geopandas",
    "netcdf4",
    "numba",
    "numpy>=1.22",
    "odc-geo",
    "pandas",
    "pyogrio",
    "pyproj",
    "rioxarray",
    "rasterio",
    "scipy",
    "shapely>=2.0",
    "xarray",
]

[project.urls]
Homepage = "https://github.com/UM-RMRS/raster_tools"
"Bug Tracker" = "https://github.com/UM-RMRS/raster_tools/issues"

[tool.setuptools.dynamic]
version = {attr = "raster_tools._version.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.ruff]
line-length = 79
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]
select = [
    "E",      # Pycodestyle
    "W",      # Pycodestyle
    "N",      # pep8-naming
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "ISC",    # flake8-implicit-str-concat
    "T20",    # flake8-print
    "F",      # Pyflakes
    "I",      # isort
    "NPY",    # numpy rules
    "PD",     # pandas-vet
    "ASYNC",  # flake8-async
    "SLOT",   # flake8-slots
    "SIM",    # flake8-simplify
    "Q",      # flake8-quotes
    "C4",     # flake8-comprehensions
    "PERF",   # perflint
    "NPY201", # Numpy 2.0
]
extend-select = ["I"]
ignore = [
    # Whitespace before ':'. flake8 is wrong when inside slice expressions.
    "E203",
    # Conflicts with ruff-format; rely on the formatter for implicit concats.
    "ISC001",
]

[tool.ruff.lint.isort]
known-first-party = ["raster_tools", "tests"]

[tool.ruff.format]
quote-style = "double"
